--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Start on Heroku: Scala",
-  "description": "A barebones Scala app (using the Play framework), which can easily be deployed to Heroku.",
+  "name": "Twitter Name Generator",
+  "description": "",
   "image": "heroku/scala",
   "addons": [ "heroku-postgresql" ]
 }
